sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: ')' expected but '<-' found.
  wfor(i<-0 to n-1) {
        ^