sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort()  {
  var n = getNombreValeurs();
  
  var i = 0
  wfor(i<-0 to n-1) {
      if (plusPetit(i+1,i)) {
        echange(i,i+1)
        i=i-2
        if (i<0) {
          
        }
      }
   
      
      
      
      
  }
}